--- a/VidCoder/Resources/Translations/CommonRes.pt.resx
+++ b/VidCoder/Resources/Translations/CommonRes.pt.resx
@@ -340,5 +340,8 @@
   <data name="Enabled" xml:space="preserve">
     <value>Activado</value>
   </data>
-  
+  <data name="Close" xml:space="preserve">
+    <value>Fechar</value>
+    <comment>Label to close a window or item.</comment>
+  </data>
 </root>
