--- a/VidCoder/Resources/Translations/PickerRes.hr.resx
+++ b/VidCoder/Resources/Translations/PickerRes.hr.resx
@@ -396,10 +396,28 @@ Sve - Uključi sve podnaslove.</value>
     <value>Uklanjanje izvorišne datoteke nakon uspješnog kodiranja:</value>
     <comment>Label for the option to automatically delete source files on completion.</comment>
   </data>
-  
-  
-  
-  
-  
-  
+  <data name="HeightFilterCheckBox" xml:space="preserve">
+    <value>Izaberite samo naslove s visinom</value>
+    <comment>Label before the UI to pick the title height limitation. For example, it might read "Pick only titles with height [ &gt; ] [ 480 ]"</comment>
+  </data>
+  <data name="HeightFilterCheckBoxAutomationName" xml:space="preserve">
+    <value>Filtrirajte naslove po visini</value>
+    <comment>Screen reader text for the height filter checkbox</comment>
+  </data>
+  <data name="HeightFilterValueAutomationName" xml:space="preserve">
+    <value>Vrijednost filtra visine</value>
+    <comment>Screen reader text for the height filter value</comment>
+  </data>
+  <data name="WidthFilterCheckBox" xml:space="preserve">
+    <value>Izaberite samo naslove  s širinom</value>
+    <comment>Label before the UI to pick the title width limitation. For example, it might read "Pick only titles with width [ &gt; ] [ 640 ]"</comment>
+  </data>
+  <data name="WidthFilterCheckBoxAutomationName" xml:space="preserve">
+    <value>Filtrirajte naslove po širini</value>
+    <comment>Screen reader text for the width filter checkbox</comment>
+  </data>
+  <data name="WidthFilterValueAutomationName" xml:space="preserve">
+    <value>Vrijednost filtra širine</value>
+    <comment>Screen reader text for the width filter value</comment>
+  </data>
 </root>
