--- a/VidCoder/Resources/Translations/EnumsRes.ja.resx
+++ b/VidCoder/Resources/Translations/EnumsRes.ja.resx
@@ -396,7 +396,13 @@
   <data name="WatchedFileStatusLive_Output" xml:space="preserve">
     <value>出力</value>
   </data>
-  
-  
-  
+  <data name="WatcherMode_FileSystemWatcher" xml:space="preserve">
+    <value>システムウォッチャー</value>
+  </data>
+  <data name="WatcherMode_Polling" xml:space="preserve">
+    <value>ポーリング</value>
+  </data>
+  <data name="EncodeCompleteActionType_Restart" xml:space="preserve">
+    <value>再開</value>
+  </data>
 </root>
