--- a/VidCoder/Resources/Translations/MiscRes.pt-BR.resx
+++ b/VidCoder/Resources/Translations/MiscRes.pt-BR.resx
@@ -266,6 +266,10 @@
   <data name="OneTimeInstallerCleanup" xml:space="preserve">
     <value>Precisamos fazer uma limpeza completa do instalador antigo. Escolha 'Sim' na próxima solicitação para remover a versão antiga do VidCoder.</value>
   </data>
-  
-  
+  <data name="EncodeCompleteWarning_RestartTitle" xml:space="preserve">
+    <value>Reiniciar eventualmente</value>
+  </data>
+  <data name="EncodeCompleteWarning_RestartMessage" xml:space="preserve">
+    <value>O sistema irá reiniciar em {0} segundos.</value>
+  </data>
 </root>
