--- a/VidCoder/Resources/Translations/MiscRes.pt.resx
+++ b/VidCoder/Resources/Translations/MiscRes.pt.resx
@@ -266,6 +266,10 @@
   <data name="OneTimeInstallerCleanup" xml:space="preserve">
     <value>É necessário fazer a limpeza do antigo instalador. Escolha 'Sim' na próxima pergunta para remover a versão antiga do VidCoder.</value>
   </data>
-  
-  
+  <data name="EncodeCompleteWarning_RestartTitle" xml:space="preserve">
+    <value>Reiniciar iminente</value>
+  </data>
+  <data name="EncodeCompleteWarning_RestartMessage" xml:space="preserve">
+    <value>O sistema irá reiniciar dentro de {0} segundos.</value>
+  </data>
 </root>
