--- a/VidCoder/Resources/Translations/PickerRes.ja.resx
+++ b/VidCoder/Resources/Translations/PickerRes.ja.resx
@@ -395,10 +395,28 @@
     <value>エンコード成功後にソースファイルを削除:</value>
     <comment>Label for the option to automatically delete source files on completion.</comment>
   </data>
-  
-  
-  
-  
-  
-  
+  <data name="HeightFilterCheckBox" xml:space="preserve">
+    <value>選択するタイトルの高さ</value>
+    <comment>Label before the UI to pick the title height limitation. For example, it might read "Pick only titles with height [ &gt; ] [ 480 ]"</comment>
+  </data>
+  <data name="HeightFilterCheckBoxAutomationName" xml:space="preserve">
+    <value>タイトルを高さでフィルター</value>
+    <comment>Screen reader text for the height filter checkbox</comment>
+  </data>
+  <data name="HeightFilterValueAutomationName" xml:space="preserve">
+    <value>高さフィルタの値</value>
+    <comment>Screen reader text for the height filter value</comment>
+  </data>
+  <data name="WidthFilterCheckBox" xml:space="preserve">
+    <value>選択するタイトルの幅</value>
+    <comment>Label before the UI to pick the title width limitation. For example, it might read "Pick only titles with width [ &gt; ] [ 640 ]"</comment>
+  </data>
+  <data name="WidthFilterCheckBoxAutomationName" xml:space="preserve">
+    <value>タイトルを幅でフィルター</value>
+    <comment>Screen reader text for the width filter checkbox</comment>
+  </data>
+  <data name="WidthFilterValueAutomationName" xml:space="preserve">
+    <value>幅フィルターの値</value>
+    <comment>Screen reader text for the width filter value</comment>
+  </data>
 </root>
