--- a/VidCoder/Resources/OptionsRes.resx
+++ b/VidCoder/Resources/OptionsRes.resx
@@ -422,4 +422,9 @@ Polling: Periodically checks the contents of the folders. Uses significant CPU a
   <data name="ShowProgressInWindowTitleCheckBox" xml:space="preserve">
     <value>Show encode progress in window title</value>
   </data>
+  <data name="DownloadingUpdateStatus" xml:space="preserve">
+    <value>Downloading version {0}...</value>
+    <comment>Shown when downloading an update.
+{0} is the update version, for example 10.4</comment>
+  </data>
 </root>
